--- a/README.Rmd
+++ b/README.Rmd
@@ -18,14 +18,14 @@ knitr::opts_chunk$set(
 
 ## Installing the GUI
 
-To install the **CRAN Release Version**, please use the following commands:
+To install the **CRAN Release Version** (1.0.6), please use the following commands:
 
 ```{r, eval=FALSE,echo=TRUE}
 setRepositories(ind=c(1:5))
 install.packages("RcmdrPlugin.BiclustGUI")
 ```
 
-To install the **Development Version** from either the *R-Forge* or *GitHub* repository use
+To install the **Development Version** (1.0.7) from either the *R-Forge* or *GitHub* repository use
 
 ```{r, eval=FALSE,echo=TRUE}
 setRepositories(ind=c(1:5))
