--- a/README.Rmd
+++ b/README.Rmd
@@ -18,14 +18,14 @@ knitr::opts_chunk$set(
 
 ## Installing the GUI
 
-To install the **CRAN Release Version** (1.0.6), please use the following commands:
+To install the **CRAN Release Version**, please use the following commands:
 
 ```{r, eval=FALSE,echo=TRUE}
 setRepositories(ind=c(1:5))
 install.packages("RcmdrPlugin.BiclustGUI")
 ```
 
-To install the **Development Version** (1.0.7) from either the *R-Forge* or *GitHub* repository use
+To install the **Development Version**  from either the *R-Forge* or *GitHub* repository use
 
 ```{r, eval=FALSE,echo=TRUE}
 setRepositories(ind=c(1:5))
@@ -71,11 +71,12 @@ library(RcmdrPlugin.BiclustGUI)
 | `biclust` | Bimax | Prelic *et al*., 2006 |
 | `fabia` | FABIA | Hochreiter *et al.*, 2010 |
 | `isa2` | The Iterative Signature Algorithm | Bergman *et al*., 2003 |
-| `iBBiG` | Iterative Binary BIclustering of Genesets | Gusenleitner *et al*., 2012 |
+| `iBBiG` | Iterative Binary Biclustering of Genesets | Gusenleitner *et al*., 2012 |
 | `rqubic` | Qualitative Biclustering | Li *et al*., 2009 |
 | `BicARE` | Biclustering Analysis and Results Exploration | Gestraud and Barillot, 2014 |
 | `s4vd` | SSVD (Sparse Singular Value Decomposition) | Lee *et al*., 2010 |
 | `s4vd` | S4VD (SSVD incorporating stability correction) | Sill *et al*., 2011 |
+|`BiBitR`| Biclustering Algorithm for extracting bit-patterns from binary data-sets | Rodriguez-Baena *et al*., 2011|
 |**R Package**|**Diagnostics**|**Publication**|
 | `BcDiag` | Bicluster Diagnostic Plots | Aregay *et al*., 2014 |
 | `superbiclust` | Generating Robust Biclusters from a Bicluster Set | Khamiakova, 2013 |
