--- a/_posts/2017-01-26-BiBitR.md
+++ b/_posts/2017-01-26-BiBitR.md
@@ -50,11 +50,11 @@ BiBit Window
 
 The *Noise* parameter determines the amount of zero's allowed in the bicluster (i.e. in the extra added rows to the starting row pair) and can take on the following values:
 
--   *Noise=0*
+-   *Noise=0:*
     No noise allowed. This gives the same result as using the original BiBit algorithm.
--   *0&lt;Noise&lt;1*
+-   *0&lt;Noise&lt;1:*
     The noise parameter will be a noise percentage. The number of allowed 0's in a (extra) row in the bicluster will depend on the column size of the bicluster. More specifically `zeros_allowed = ceiling(noise * columnsize)`. For example for Noise=0.10 and a bicluster column size of 5, the number of allowed 0's would be 1.
--   *Noise&gt;=1*
+-   *Noise&gt;=1:*
     The noise parameter will be the number of allowed 0's in a (extra) row in the bicluster independent from the column size of the bicluster. In this noise option. The noise parameter should be an integer.
 
 The second *Plots & Diagnostics* tab contains the same graphs and diagnostics as the other `biclust` methods in the GUI. (Only the *Summary* button has been switched out for a *Top Maximum BC* button.)
