--- a/_posts/2017-01-26-BiBitR.md
+++ b/_posts/2017-01-26-BiBitR.md
@@ -92,6 +92,14 @@ The BiBit algorithm (with noise allowance) has also been included in a small new
 BiBit Patterns Window
 </p>
 
+### Re-implementation of superbiclust
+
+A central issue of biclustering is its stability which can highly influence the ability to interpret the results of a biclustering analysis. The stability can be affected by initialisation, parameter settings and perturbations such as random noise. Shi et al. (2010) introduced a novel procedure for obtaining robust biclusters from a set of initial values which is exactly what the `superbiclust` R package will accomplish.
+
+The `superbiclust` package had already been implemented in the GUI, but it has now been made easier to repeat a similar biclustering algorithm multiple times and feed it into the superbiclust framework.
+
+A detailed guide on the *superbiclust window* can be found in the [Vignette](https://github.com/ewouddt/RcmdrPlugin.BiclustGUI/raw/master/vignettes/GuideBiclustGUI.pdf).
+
 ### Contact
 
 Please direct any **questions/suggestions/bugs** to `ewoud.detroyer[at]uhasselt.be`.
