--- a/vignettes/GuideBiclustGUI.tex
+++ b/vignettes/GuideBiclustGUI.tex
@@ -77,7 +77,7 @@
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 %\usepackage{Sweave}
 
-\title{The BiclustGUI R Package - 1.1.1}
+\title{The BiclustGUI R Package - 1.1.3}
 \author{De Troyer Ewoud}
 \date{}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -3379,7 +3379,7 @@ checked}\label{superbiclust_example2}}
 
 \subsection{Guideline - Template Scripts}
 \subsubsection{newmethod\_script}
-\noindent This script can also be found in the \verb|doc| subdirectory of the
+\noindent This script can also be found in the \verb|scripts| subdirectory of the
 package.
 \begin{verbatim}
 newmethod_WINDOW <- function(){     # Change newmethod to your own method name
@@ -4212,7 +4212,7 @@ biclustplaid_WIN <- function(){
 
 \end{verbatim}
 \subsubsection{newtool\_script}
-\noindent This script can also be found in the \verb|doc| subdirectory of the
+\noindent This script can also be found in the \verb|scripts| subdirectory of the
 package.
 \begin{verbatim}
 newtool_WINDOW <- function(methodname){  
